# lida_gfx

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.org  lida_gfx.h  lida_gfx_vulkan.c
samples/: CMakeLists.txt  bloom_teapots.c  cube.c  equalizer.c  text.c  triangle.c  util.h
samples/data/: font.h  teapot.h
samples/shaders/: bloom_downsample.comp  bloom_read.comp  bloom_upsample.comp  colored2d.frag  colored2d.vert  complex.glsl  cube.vert  fourier_transform.comp  gamma.frag  model.frag  model.vert  offscreen.frag  offscreen.vert  text.vert
